--- a/views/agents-grid.ejs
+++ b/views/agents-grid.ejs
@@ -39,7 +39,7 @@
           <div class="col-md-4">
             <div class="card-box-d">
               <div class="card-img-d">
-                <img src="data:Binary?<%= staff.img.contentType %>;base64,<%= staff.img.data.toString('base64') %>" alt="" class="img-d img-fluid">
+                <img src="<%= staff.img.url %>" alt="" class="img-d img-fluid">
               </div>
               <div class="card-overlay card-overlay-hover">
                 <div class="card-header-d">
