--- a/views/create_admin.ejs
+++ b/views/create_admin.ejs
@@ -28,7 +28,7 @@
             <p>Use this from to add new Admin</p>
         </div>
 
-        <form action="/create-admins" method="POST" enctype="multipart/form-data" class="formings">
+        <form action="/admin/create-admins" method="POST" enctype="multipart/form-data" class="formings">
             <div class="form-group">
                 <label>First Name:</label>
                 <input class="form-control" type="text" placeholder="" name="first_name">
