--- a/views/create_blog.ejs
+++ b/views/create_blog.ejs
@@ -28,7 +28,7 @@
             <p>Use this from to Add new House property</p>
         </div>
 
-        <form action="/create-blog" method="POST" enctype="multipart/form-data" class="formings">
+        <form action="/admin/create-blog" method="POST" enctype="multipart/form-data" class="formings">
             <div class="form-group">
                 <label>Author's Name:</label>
                 <input class="form-control" type="text" placeholder="e.g Idris Yusuph Olatunji Land" name="fullname" value="<%= user.first_name %> <%= user.second_name %>" readonly>
