--- a/views/create_info.ejs
+++ b/views/create_info.ejs
@@ -28,7 +28,7 @@
             <p>Use this from to create company Information</p>
         </div>
 
-        <form action="/create-info" method="POST" enctype="multipart/form-data" class="formings">
+        <form action="/admin/create-info" method="POST" enctype="multipart/form-data" class="formings">
             <div class="form-group">
                 <label>Company's Name:</label>
                 <input class="form-control" type="text" placeholder="e.g Idris Valiantfooot" name="company_name">
