--- a/views/create_land.ejs
+++ b/views/create_land.ejs
@@ -28,7 +28,7 @@
             <p>Use this from to Add new House property</p>
         </div>
 
-        <form action="/create-land" method="POST" enctype="multipart/form-data" class="formings">
+        <form action="/admin/create-land" method="POST" enctype="multipart/form-data" class="formings">
             <div class="form-group">
                 <label>Property's Name:</label>
                 <input class="form-control" type="text" placeholder="e.g Apple City Land" name="name">
