--- a/views/create_mission.ejs
+++ b/views/create_mission.ejs
@@ -28,7 +28,7 @@
             <p>Use this from Create Company Mission</p>
         </div>
 
-        <form action="/create-mission" method="POST" enctype="multipart/form-data" class="formings">
+        <form action="/admin/create-mission" method="POST" enctype="multipart/form-data" class="formings">
             <div class="form-group">
                 <label>Heading:</label>
                 <input class="form-control" type="text" placeholder="e.g contact us" name="heading">
