--- a/views/create_service.ejs
+++ b/views/create_service.ejs
@@ -28,7 +28,7 @@
             <p>Use this from to create Company Services</p>
         </div>
 
-        <form action="/create-service" method="POST" enctype="multipart/form-data" class="formings">
+        <form action="/admin/create-service" method="POST" enctype="multipart/form-data" class="formings">
             
             <div class="form-group">
                 <label>Service Title:</label>
