--- a/views/create_staff.ejs
+++ b/views/create_staff.ejs
@@ -28,7 +28,7 @@
             <p>Use this from to add new Staff</p>
         </div>
 
-        <form action="/create-staff" method="POST" enctype="multipart/form-data" class="formings">
+        <form action="/admin/create-staff" method="POST" enctype="multipart/form-data" class="formings">
             <div class="form-group">
                 <label>First Name:  <span style="color: red;">*</span></label>
                 <input class="form-control" type="text" placeholder="" name="first_name">
