--- a/views/dash_include/dashboard_all.ejs
+++ b/views/dash_include/dashboard_all.ejs
@@ -24,7 +24,7 @@
             </div>
             <div class="profile-group">
                 <div class="profile_image">
-                    <img src="data:Binary?<%= user.img.contentType %>;base64,<%= user.img.data.toString('base64') %>" alt="" width="100">
+                    <img src="<%= user.img.url %>" alt="" width="100">
                 </div>
                 <div class="profile_name">
                   
