--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -25,7 +25,7 @@
             </div>
             <div class="profile-group">
                 <div class="profile_image">
-                    <img src="data:Binary?<%= user.img.contentType %>;base64,<%= user.img.data.toString('base64') %>" alt="" width="100">
+                    <img src="<%= user.img.url %>" alt="" width="100">
                 </div>
                 <div class="profile_name">
                  
@@ -152,7 +152,7 @@
                         <img src="/img/Valiant-01.png" alt="" srcset="" width="100">
                     </div>
                     <div class="companyname">
-                        <p class="naming">Comapany Name:</p>
+                        <p class="naming">Company Name:</p>
                         <p><%= about.company_name %></p>
                     </div>
                     <div class="companyname address">
