--- a/views/edit_admin.ejs
+++ b/views/edit_admin.ejs
@@ -81,7 +81,7 @@
             <p>Use this from to Update Admin Image</p>
         </div>
 
-        <form action="/edit-admin-image/<%= admin._id %>" method="POST" enctype="multipart/form-data" class="formings">
+        <form action="/admin/edit-admin-image/<%= admin._id %>" method="POST" enctype="multipart/form-data" class="formings">
             <div class="form-group">
                 <label for="img">Page Cover:</label>
                 <input type="hidden" id="id" name="id" value="<%= admin._id %>">
