--- a/views/edit_service.ejs
+++ b/views/edit_service.ejs
@@ -83,7 +83,7 @@
                         <p>Use this from to create Company Services Image</p>
                     </div>
             
-                    <form action="/edit-service-image/<%= service._id %>" method="POST" enctype="multipart/form-data" class="formings">
+                    <form action="/admin/edit-service-image/<%= service._id %>" method="POST" enctype="multipart/form-data" class="formings">
                         
                         <div class="form-group">
                             <label for="img">Service image Cover:</label>
