--- a/views/service_single.ejs
+++ b/views/service_single.ejs
@@ -37,7 +37,7 @@
           <div class="col-sm-12 position-relative">
             <% if(service) {%>
             <div class="about-img-box">
-              <img src="data:Binary?<%= service.img.contentType %>;base64,<%= service.img.data.toString('base64') %>" alt="" class="img-fluid">
+              <img src=<%= service.img.url %>" alt="" class="img-fluid">
             </div>
             <% } %>
             <div class="sinse-box">
@@ -52,7 +52,7 @@
             <div class="row">
               <% if(service) {%>
               <div class="col-md-6 col-lg-5">
-                <img src="data:Binary?<%= service.img2.contentType %>;base64,<%= service.img2.data.toString('base64') %>" alt="" class="img-fluid">
+                <img src=<%= service.img2.url%>" alt="" class="img-fluid">
               </div>
               <% } %>
               <div class="col-lg-2  d-none d-lg-block position-relative">
