--- a/views/subcriber_message.ejs
+++ b/views/subcriber_message.ejs
@@ -5,7 +5,7 @@
 <div class="main-container">
     <nav class="headering">
         <div class="head_in">
-            <P>Admin</P>
+            <P>Admin</P> 
          <ol>
             <li> 
                 <a href="">
@@ -25,7 +25,7 @@
             <p>Genaral Email to Subscribers</p>
         </div>
 
-        <form action="/send-email" method="POST" enctype="multipart/form-data" class="formings">
+        <form action="/admin/send-email" method="POST" enctype="multipart/form-data" class="formings">
             <div class="form-group">
                 <label>Subject:</label>
                 <input class="form-control" value="" type="text" name="subject">
