--- a/views/view_house.ejs
+++ b/views/view_house.ejs
@@ -28,19 +28,19 @@
         <div class="wrap_all_profile">
             <div class="staffprofile">
                 <div class="image_profile">
-                    <% if(land.img.contentType) {%>
+                    <% if(land.img.url) {%>
                     <div class="img_staff_one">
-                        <img src="data:Binary?<%= land.img.contentType %>;base64,<%= land.img.data.toString('base64')%>" alt="" srcset="">
+                        <img src="<%= land.img.url %>" alt="" srcset="">
                     </div>
                     <% } %>
                     <% if(land.img2.contentType) {%>
                     <div class="img_staff_one">
-                        <img src="data:Binary?<%= land.img2.contentType %>;base64,<%= land.img2.data.toString('base64')%>" alt="" srcset="">
+                        <img src="<%= land.img2.url %>" alt="" srcset="">
                     </div>
                     <% } %>
                     <% if(land.floor_plan.contentType) {%>
                     <div class="img_staff_one">
-                        <img src="data:Binary?<%= land.floor_plan.contentType %>;base64,<%= land.floor_plan.data.toString('base64')%>" alt="" srcset="">
+                        <img src="<%= land.floor_plan.url %>" alt="" srcset="">
                     </div>
                     <% } %>
     
