--- a/views/view_land.ejs
+++ b/views/view_land.ejs
@@ -29,10 +29,10 @@
             <div class="staffprofile">
                 <div class="image_profile">
                     <div class="img_staff_one">
-                        <img src="data:Binary?<%= land.img.contentType %>;base64,<%= land.img.data.toString('base64')%>" alt="" srcset="">
+                        <img src="<%= land.img.url %>" alt="" srcset="">
                     </div>
                     <div class="img_staff_one">
-                        <img src="data:Binary?<%= land.img2.contentType %>;base64,<%= land.img2.data.toString('base64')%>" alt="" srcset="">
+                        <img src="<%= land.image.url %>" alt="" srcset="">
                     </div>
     
     
