--- a/views/change_password.ejs
+++ b/views/change_password.ejs
@@ -36,6 +36,7 @@
             <div class="form-group">
                 <label for="passwords">Enter previous password</label>
                 <input class="form-control" type="password" name="passwords" value="<%= typeof passwords != 'undefined' ? passwords : '' %>" id="password_one">
+                <i class="fas fa-eye-slash fa-eye" onclick="myFunctions()"></i>
             </div>
             
             <div class="form-group">
@@ -58,7 +59,7 @@
 
 <script>
     // Assuming eyeClosed and eyeOpened are arrays of elements
- let eyeClosed = document.getElementsByClassName('fas');
+ let eyeClosed = document.getElementsByClassName('fa-eye');
  let eyeOpened = document.getElementsByClassName('fa-eye-slash');
  
  // Adding a click event listener to each element in the collection
@@ -81,12 +82,21 @@
        x.type = "password";
      }
    }
+
+   function myFunctions() {
+     var x = document.getElementById("password_one");
+     if (x.type === "password") {
+       x.type = "text";
+     } else {
+       x.type = "password";
+     }
+   }
    </script>
 
 <style>
    
 
-     i {
+   .fa-eye-slash, .fa-eye{
         color: var(--orange1);
     }
 </style>
