--- a/views/create_contact_image.ejs
+++ b/views/create_contact_image.ejs
@@ -28,7 +28,7 @@
             <p>Use this from to upload Image</p>
         </div>
 
-        <form action="/contact_image" method="POST" enctype="multipart/form-data" class="formings">
+        <form action="/admin/contact_image" method="POST" enctype="multipart/form-data" class="formings">
             <div class="form-group">
                 <label>Message:</label>
                 <input class="form-control" type="text" placeholder="e.g contact us" name="message">
