--- a/views/dash_include/main_header.ejs
+++ b/views/dash_include/main_header.ejs
@@ -12,11 +12,45 @@
   <meta content="" name="description">
   <meta content="" name="keywords">
 
-  <meta property="og:title" content="Your Website Name Here"/>
-  <meta property="og:type" content="website"/>
-  <meta property="og:url" content="http://yoururl.com"/>
-  <meta property="og:image" content="http://yoururl.com/yourimage.jpg"/>
-  <meta property="og:description" content="Your website description here"/>
+
+
+<% if (typeof blog !== 'undefined' && blog && blog.img && blog.img.url && blog.img2 && blog.img2.url) { %>
+  <!-- Open Graph meta tags ... -->
+  <meta property="og:title" content="<%= blog.topic %>" />
+  <meta property="og:description" content="<%= blog.category %>" />
+  <meta property="og:url" content="<%= typeof currentUrl !== 'undefined' ? currentUrl : '' %>" id="og-url" />
+
+
+  <!-- Include images for sharing -->
+  <meta property="og:image" content="<%= blog.img.url %>" />
+  <meta property="og:image:width" content="1200" />
+  <meta property="og:image:height" content="630" />
+
+  <!-- Twitter Card meta tags -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="<%= blog.topic %>" />
+  <meta name="twitter:description" content="<%= blog.category %>" />
+  <meta name="twitter:image" content="<%= blog.img.url %>" />
+<% } else { %>
+  <!-- Default meta tags -->
+  <meta property="og:title" content="Default Title" />
+  <meta property="og:description" content="Default Description" />
+  <meta property="og:url" content="<%= typeof currentUrl !== 'undefined' ? currentUrl : '' %>" id="og-url" />
+
+
+  <!-- Include a default image for sharing -->
+  <meta property="og:image" content="default-image-url.jpg" />
+  <meta property="og:image:width" content="1200" />
+  <meta property="og:image:height" content="630" />
+
+  <!-- Twitter Card meta tags with default values -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Default Title" />
+  <meta name="twitter:description" content="Default Description" />
+  <meta name="twitter:image" content="default-image-url.jpg" />
+<% } %>
+
+
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700" rel="stylesheet">
@@ -29,6 +63,8 @@
 
   <!-- Template Main CSS File -->
   <link href="/css/style.css" rel="stylesheet">
+
+
 
   <!-- =======================================================
   * Template Name: EstateAgency
