--- a/views/edit_blog.ejs
+++ b/views/edit_blog.ejs
@@ -69,7 +69,7 @@
             <p>Use this from to Update Blog Image</p>
         </div>
 
-        <form action="/edit-blog-image/<%= blog._id %>" method="POST" enctype="multipart/form-data" class="formings">
+        <form action="/admin/edit-blog-image/<%= blog._id %>" method="POST" enctype="multipart/form-data" class="formings">
             <div class="form-group">
                 <label for="img">Page Cover:</label>
                 <input type="hidden" name="id" value="<%= blog._id %>">
