--- a/views/edit_info.ejs
+++ b/views/edit_info.ejs
@@ -185,7 +185,7 @@
                         <p>Use this from to create Company Services</p>
                     </div>
             
-                    <form action="/edit-info-image/<%= service._id %>" method="POST" enctype="multipart/form-data" class="formings">
+                    <form action="/admin/edit-info-image/<%= service._id %>" method="POST" enctype="multipart/form-data" class="formings">
                         
                         <div class="form-group">
                             <label for="img">About image Cover:</label>
