--- a/views/edit_land.ejs
+++ b/views/edit_land.ejs
@@ -93,7 +93,7 @@
             <p>Use this form to Update House property</p>
         </div>
 
-        <form action="/edit-land-image/<%= land._id %>" method="POST" enctype="multipart/form-data" class="formings">
+        <form action="/admin/edit-land-image/<%= land._id %>" method="POST" enctype="multipart/form-data" class="formings">
             <div class="form-group">
                 <input type="hidden" name="id" value="<%= land._id %>">
                 <label for="img">Image 1</label>
