--- a/views/edit_staff.ejs
+++ b/views/edit_staff.ejs
@@ -112,7 +112,7 @@
             <p>Use this from to Update new Staff's Image</p>
         </div>
 
-        <form action="/edit-staff-image/<%= staff._id %>" method="POST" enctype="multipart/form-data" class="formings">
+        <form action="/admin/edit-staff-image/<%= staff._id %>" method="POST" enctype="multipart/form-data" class="formings">
             <div class="form-group">
                 <input type="hidden" id="id" name="id" value="<%= staff._id %>">
                 <label for="img">Upload image:</label>
