--- a/views/land_single.ejs
+++ b/views/land_single.ejs
@@ -41,10 +41,10 @@
             <div id="property-single-carousel" class="swiper">
               <div class="swiper-wrapper">
                 <div class="carousel-item-b swiper-slide">
-                  <img src="data:Binary?<%= prop.img.contentType %>;base64,<%= prop.img.data.toString('base64') %>" alt="">
+                  <img src="<%= prop.img.url %>" alt="">
                 </div>
                 <div class="carousel-item-b swiper-slide">
-                  <img src="data:Binary?<%= prop.image.contentType %>;base64,<%= prop.image.data.toString('base64') %>" alt="">
+                  <img src="<%= prop.image.url %>" alt="">
                 </div>
               </div>
             </div>
@@ -167,7 +167,7 @@
             <% if (staff) {%>
               <div class="row">
                 <div class="col-md-6 col-lg-4">
-                  <img src="data:Binary?<%= staff.img.contentType %>;base64,<%= staff.img.data.toString('base64') %>"  alt="" class="img-fluid">
+                  <img src="<%= staff.img.url %>"  alt="" class="img-fluid">
                 </div>
                
                 <div class="col-md-6 col-lg-4">
