--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -41,10 +41,10 @@
             <div id="property-single-carousel" class="swiper">
               <div class="swiper-wrapper">
                 <div class="carousel-item-b swiper-slide">
-                  <img src="data:Binary?<%= prop.img.contentType %>;base64,<%= prop.img.data.toString('base64') %>" alt="">
+                  <img src="<%= prop.img.url %>" alt="">
                 </div>
                 <div class="carousel-item-b swiper-slide">
-                  <img src="data:Binary?<%= prop.img2.contentType %>;base64,<%= prop.img2.data.toString('base64') %>" alt="">
+                  <img src="<%= prop.img2.url %>" alt="">
                 </div>
               </div>
             </div>
