--- a/views/login.ejs
+++ b/views/login.ejs
@@ -9,7 +9,7 @@
     <div class="flex-display">
         <div class="svg_animal">
             <div class="svg_main">
-                <img src="/img/one.png" alt="" srcset="" width="200">
+                <img src="https://res.cloudinary.com/dj6xdawqc/image/upload/v1703789588/one_ng8jbn.png" alt="" srcset="" width="200">
             </div>
         </div>
         <div class="div_form_for_login">
@@ -24,7 +24,11 @@
                             <input type="email" name="email" id="">
                             <input type="password" name="password" id="pass">
                            
-                            <div class="forget_pass"><a href="/admin/forget-password">Forget Password?</a> <i class="fas fa-eye-slash fa-eye" onclick="myFunction()"></i></div>
+                            <div class="forget_pass">
+                                
+                                <a href="/admin/forget-password">Forget Password?</a> 
+                                <i class="fas fa-eye-slash fa-eye" onclick="myFunction()"></i>
+                            </div>
                             <input type="submit" value="Sign In">
                            
                         </form>
@@ -44,7 +48,7 @@
 
 <script>
    // Assuming eyeClosed and eyeOpened are arrays of elements
-let eyeClosed = document.getElementsByClassName('fas');
+let eyeClosed = document.getElementsByClassName('fa-eye');
 let eyeOpened = document.getElementsByClassName('fa-eye-slash');
 
 // Adding a click event listener to each element in the collection
@@ -75,9 +79,12 @@ for (let i = 0; i < eyeClosed.length; i++) {
     }
 
     .forget_pass {
+       
         display: flex;
         flex-direction: row;
-        gap: 200px;
+        flex-wrap: wrap;
+        justify-content: space-between;
+        align-items: center;
     }
 
     .forget_pass a, .forget_pass i {
