--- a/views/reply_single.ejs
+++ b/views/reply_single.ejs
@@ -25,7 +25,7 @@
             <p>Reply to <%= contact.name %> Message</p>
         </div>
 
-        <form action="/send-single-email?id=<%=contact._id %>" method="POST" enctype="multipart/form-data" class="formings">
+        <form action="/admin/send-single-email?id=<%=contact._id %>" method="POST" enctype="multipart/form-data" class="formings">
             <div class="form-group">
                 <label>Email:</label>
                 <input class="form-control" value="<%= contact.email %>" type="email" name="email">
